fix: header spacing

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,12 +1,11 @@
 .header {
-    padding: 0 0.5rem;
+    padding: 2.5rem 1rem;
     height: 3rem;
 
     display: flex;
     align-items: center;
-    gap: 0.5rem;
 }
 
 .header__icon {
-    width: 2rem;
+    width: 3rem;
 }
